# ground

./: .gitignore  LICENSE  README.rst  ground.spec  pyproject.toml
.github/workflows/: main.yml
example/: config.toml
example/projects/mikardo/: ground.toml  ground.txt
ground/: build.py  config.py  core.py  gui.py  model.py  utils.py
ground/cli/: __main__.py
ground/gui/: __main__.py
ground/templates/: base.html  index.html  product.html  products.html
ground/utils/: __init__.py  build.py
