[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ground"
version = "0.0.1"
dependencies = [
  "pydantic",
  "platformdirs",
  "jinja2",
]
requires-python = ">=3.8"
authors = [
  {name = "axju", email = "moin@axju.de"},
]
maintainers = [
  {name = "axju", email = "moin@axju.de"},
]
description = "A product builder"
readme = "README.rst"
license = "MIT" 
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/axju/ground"
"Bug Tracker" = "https://github.com/axju/ground/issues"

[project.scripts]
ground = "ground.cli:main"
